<resources>
    <string name="app_name">NewsApp</string>
    <string name="error_network_not_available">error network not available</string>

    <string name="login_activity_email">Login</string>
    <string name="login_activity_password">Mot de passe</string>
    <string name="login_activity_login">Se connecter</string>
    <string name="login_activity_signup">S\'inscrire</string>

    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="subscribe">Créer le compte</string>
    <string name="edit">Modifier</string>
    <string name="edition">Modification</string>
    <string name="createpost">Créer le post</string>
    <string name="createcomment">Créer le commentaire</string>
    <string name="createnews">Créer la news</string>
    <string name="createtopic">Créer le topic</string>

    <string name="edited">Modifié</string>

    <string name="news_creation">Création de news</string>
    <string name="topic_creation">Création de topic</string>
    <string name="comment_creation">Création de commentaire</string>
    <string name="post_creation">Création de post</string>

    <string name="nav_news">News</string>
    <string name="nav_topics">Topics</string>
    <string name="nav_my_account">Account</string>

    <string name="error_getting_information">Erreur de récupération du compte</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="bundle_news_id">NEWSID</string>
    <string name="bundle_news_title">NEWSTITLE</string>
    <string name="bundle_news_content">NEWSCONTENT</string>

    <string name="bundle_topic_id">TOPICID</string>
    <string name="bundle_topic_title">TOPICTITLE</string>
    <string name="bundle_topic_content">TOPICCONTENT</string>

    <string name="bundle_id">ID</string>
    <string name="bundle_type">TYPE</string>
    <string name="bundle_content">CONTENT</string>
    <string name="bundle_title">TITLE</string>

    <string name="title">Title</string>
    <string name="content">content</string>

    <string name="error_login">Erreur de connexion</string>
    <string name="error_deleting">Erreur lors de la suppression</string>
    <string name="deleted">Supprimé</string>
    <string name="actions">Actions</string>
    <string name="news_created">News créée</string>
    <string name="topic_created">Topic créé</string>
    <string name="post_created">Post créé</string>
    <string name="comment_created">Commentaire créé</string>
    <string name="fill_title">Please fill the title</string>
    <string name="fill_content">Please fill content</string>

    <string name="disconnect">Déconnexion</string>


    <array name="menu_admin">
        <item>Supprimer</item>
        <item>Modifier</item>
    </array>
</resources>
