<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/it_title_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/et_title_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/it_content_post"
            android:layout_below="@id/it_title_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/et_content_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:lines="6"/>

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btn_create_poste"
            android:layout_width="200dp"
            android:layout_below="@id/it_content_post"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/createpost"
            android:textAllCaps="false"/>


</RelativeLayout>